# ArxivSDK

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
academic_sdk/: __init__.py  base_client.py  errors.py  models.py  pyproject.toml
arxiv_sdk/: __init__.py  async_client.py  categories.py  client.py  errors.py  models.py  pdf_processor.py  pyproject.toml  query.py
arxiv_sdk/tests/: test_async.py  test_client.py  test_integration_live.py
arxiv_tui/: __init__.py  app.py  pyproject.toml
arxiv_tui/screens/: details.py  downloads.py  results.py  search.py  semantic_scholar_search.py  view_downloaded.py  view_paper.py
semantic_scholar_sdk/: __init__.py  client.py  models.py  pyproject.toml
semantic_scholar_sdk/tests/: test_client.py  test_models.py
tests/: test_async.py  test_categories.py  test_integration_live.py  test_models.py  test_query.py
