[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-sdk"
version = "0.1.0"
description = "Shared base SDK for academic APIs"
authors = [{name = "Raqkaaq", email = "eryan97@raqkaaq.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dateutil>=2.8,<3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["academic_sdk"]