[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-tui"
version = "0.2.0"
description = "Interactive TUI for arXiv exploration using ArxivSDK"
requires-python = ">=3.8"
dependencies = [
    "arxiv-sdk>=0.2.0",
    "textual>=0.50,<1.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
arxiv-tui = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_tui"]