[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-tui"
version = "0.1.0"
description = "Textual-based TUI for searching and managing arXiv and Semantic Scholar papers"
authors = [{name = "Raqkaaq", email = "eryan97@raqkaaq.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "arxiv-sdk>=0.2.0",
    "textual>=6.0.0",
    "textual-timepiece>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/raqkaaq/ArxivSDK"
Repository = "https://github.com/raqkaaq/ArxivSDK"

[tool.setuptools.packages.find]
where = ["."]
include = ["arxiv_tui"]

[tool.setuptools.package-data]
arxiv_tui = ["py.typed"]