[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-scholar-sdk"
version = "0.1.0"
description = "SDK for Semantic Scholar Academic Graph API"
authors = [{name = "Raqkaaq", email = "eryan97@raqkaaq.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "academic_sdk>=0.1.0",
    "requests>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "python-dateutil>=2.8,<3.0"
]

[project.urls]
Homepage = "https://github.com/raqkaaq/ArxivSDK"
Repository = "https://github.com/raqkaaq/ArxivSDK"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_scholar_sdk"]